# serdel-app

./: Makefile  README.md  deck.yaml  pyproject.toml
services/example-service/deploy/: compose.yaml  service.yaml
src/deck/: cli.py  commands.py  config.py  context.py  logging.py  main.py  state.py
src/deck/providers/: backup.py  deploy.py  targets.py
targets/: inventory.yaml
